use the image resize plugin

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -19,7 +19,7 @@ metas:
     - Infima Theme For Lume
     - Static blog generator
     - Static documentation generator
-  image: /blog/announcing-cushy-text/index.png
+  image: /uploads/blog/announcing-cushy-text-regular.jpg
   robots: true
   generator: true
 ---
@@ -36,7 +36,7 @@ blog instances, build content and landing pages and have interactive features th
 advantage of Deno, Deno Deploy & Lume 3's Router.
 
 <img class="blog_image" 
-  src="/uploads/announcing-cushy-text.jpg" 
+  src="/uploads/blog/announcing-cushy-text-regular.jpg" 
   alt="A dreamy cloudscape with a flame shaped cloud spark in the middle" 
   title="A Dreamy Text Template For Lume 3" />
 
