--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -20,7 +20,7 @@ metas:
     - Infima Theme For Lume
     - Static blog generator
     - Static documentation generator
-  image: /blog/interactive-feature-plans/index.png
+  image: /uploads/blog/interactive-feature-plans-regular.jpg
   robots: true
   generator: true
 ---
@@ -34,7 +34,7 @@ me know! I don't want to ship moving parts just for the sake of having more thin
 fidget with, so I'm really looking at ways to grab more signal from visitors.
 
 <img class="blog_image" 
-  src="/uploads/interactive-feature-planning.jpg" 
+  src="/uploads/blog/interactive-feature-planning-regular.jpg" 
   alt="A shadowy figure of a man standing next to a crate. A thought bubble reveals many gears working together." 
   title="Feature Creep Is Real!" />
 
