--- a/src/blog/welcome-wordpress.mdx
+++ b/src/blog/welcome-wordpress.mdx
@@ -22,7 +22,7 @@ metas:
     - WordPress With Lume
     - WordPress Static Generator
     - Lume With WordPress
-  image: /blog/welcome-wordpress/index.png
+  image: /uploads/blog/static-websites-regular.jpg
   robots: true
   generator: true
 ---
@@ -37,7 +37,7 @@ hybrid setup, where you use your familiar WordPress to write and
 edit, but export your content and use something like Lume to generate 
 the site.
 
-<img src="/uploads/static-websites.jpg"
+<img src="/uploads/blog/static-websites-regular.jpg"
   alt="A digital oak tree comprised of individual file nodes" 
   title="Some blogs that have been around since 2003 are like giant redwoods in this analogy ..." 
   class="blog_image"
