--- a/src/blog/static-site-enthusiast.mdx
+++ b/src/blog/static-site-enthusiast.mdx
@@ -14,7 +14,7 @@ tags:
   - wordpress
 metas:
   lang: en
-  description: '"=description"'
+  description: A journey to evangelizing static generated sites that began in WordPress hosting almost two decades ago.
   tags:
     - WordPress Hosting
     - Static Sites
