"Did you take the parking break off?"

--- a/src/blog/0-0-1-release-update.mdx
+++ b/src/blog/0-0-1-release-update.mdx
@@ -3,7 +3,7 @@ title: "v0.0.1 Release Update: On-Track For Early April 2025!"
 description: Unplanned Additions, Last-minute Ditches, And A List Of What Remains To Be Finished
 date: 2025-03-18
 author: Tim Post
-draft: true
+draft: false
 menu:
   visible: true
   order: 0
