css and content updates

--- a/src/blog/0-0-1-release-update.mdx
+++ b/src/blog/0-0-1-release-update.mdx
@@ -22,15 +22,16 @@ metas:
   generator: true
 ---
 
-Want to know what's special about the image below this sentence? It was 
+Want to know what's special about the OG image for this post? It was 
 automatically created for the blog post by the 
 [OG Image Generator](https://lume.land/plugins/og_images/) plugin. That
 leads to my first update: [all of the planned pre-configured plugins](/features/#plugins) 
 have been installed and configured to work correctly in conjunction with each
 other.
 
-Because Óscar is amazing and noticed the value in tag feeds, we now also 
-have proper tag wiki pages!
+That was originally going to be the main image for this post, but because Óscar is amazing 
+and noticed the value in tag feeds, we now also now have proper tag wiki pages! Those 
+get center stage:
 
 <img
   class="blog_image"
@@ -38,11 +39,12 @@ have proper tag wiki pages!
   alt="Screenshot Of The Tag Wiki System" 
   title="We have a tag wiki system, complete with tag feeds!" />
 
+[Here's the generated OG Image, if you're curious](/blog/0-0-1-release-update/index.png).
+
 There's more. A lot more. Once the theme is officially released, I'll have a proper
 and frequently updated changelog so that users can decide when they want to cherry
-pick something new or update.
-
-But for now, you'll just have to get by with me dumping it all in a blog post.
+pick something new or update. But for now, you'll just have to get by with me dumping 
+it all in a blog post.
 
 {/* more */}
 
