minor content tweaks

--- a/src/blog/static-site-enthusiast.mdx
+++ b/src/blog/static-site-enthusiast.mdx
@@ -35,7 +35,7 @@ do what you're trying to get it to do_.
 That's what it was like working in the hosting industry in the early 
 2000s when people wondered why their WordPress site was suspended on a 
 shared server for over-using resources. And that's when I hyper-fixated
-on static sites as the only really naturally "scalable" solution.
+on static sites as the only really naturally "scale-able" solution.
 
 <img 
   class="blog_image"
