--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -144,8 +144,8 @@ your content such as:
 
 It's not possible to produce a plugin that can forever guarantee amazing SEO results 
 or make magic promises, and I'd caution anyone to treat anything that did with extreme
-skepticism. Search engines are proprietary black boxes, so SEO is basically religion 
-you can grok with meaningful coincidence.
+skepticism. Search engines are proprietary black boxes, so SEO is basically just religion 
+you can grok through meaningful coincidences.
 
 This plugin just helps make sure you're not getting in your own way with common mistakes,
 so your content has a fair chance. 
