docs index: minor nit

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -34,7 +34,7 @@ Once you have a working copy of the repo, the following sets `LUME_DRAFTS` true 
 local server:
 
 ```bash
-$ deno task dev
+> deno task dev
 ```
 
 There's also a special task for starting the production server (`src/_serve.ts`),
@@ -42,7 +42,7 @@ which you should only have to do if you're changing the server code or testing
 redirects:
 
 ```bash
-$ deno task mock
+> deno task mock
 ```
 
 This starts the _production_ server locally, on port 8000, and then watches
