Add inline plugin

--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -222,6 +222,7 @@ optimization. Have a look at what's under the hood:
 | nav        | Nav helper for Lume    | base | Lume Official | Yes | No |
 | transform-images | Transform Images | base | Lume Official | Yes | No |
 | icons | Easily Use Open Source Icon Sets | base | Lume Official | Yes | No |
+| inline | HTML Helper | base | Lume Official | Yes | No |
 | mdx        | Default Document, Built On SSX | base | Lume Official | Yes | No |
 | postcss    | CSS Processor          | css | Lume Official | Yes | No |
 | purgecss   | CSS Cleaner            | css | Lume Official | Yes | No |
