--- a/src/blog/0-0-1-component-strategy-update.mdx
+++ b/src/blog/0-0-1-component-strategy-update.mdx
@@ -3,7 +3,7 @@ title: An Update On Component Strategy For The 0.0.1 Release
 description: Infima Component CSS Will Be Loaded; Components Building On Them Auto-Load.
 date: 2025-03-22
 author: Tim Post
-draft: true
+draft: false
 menu:
   visible: true
   order: 0
