--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -193,17 +193,17 @@ The other file `demo.yml` contains all the strings that make _this_ website's fe
 like the front page cards and such. Do whatever you want with those, they were kept out because
 they would most likely be noise for translators.
 
-<h2 id="components">Includes Infima Design Components</h2>
+<h2 id="components">Includes Lume 3 Components Built On Infima's Design System</h2>
 
 Take a look at [the Infima documentation site](https://infima.dev/docs/getting-started/introduction) 
 to see everything included with the framework. You have everything from a grid and 
 markup-friendly spacing system to alerts and buttons, pills, tabs and many other
 components that technical / text sites need.
 
-_Many_ of those components are also in the process of becoming Lume 3 components, which
-will allow new sites to load only the CSS and JS they need from the framework as components
-insert it through being used. Sites that already use component markup everywhere are also
-fine, both ways work.
+Things that take advantage of these components are built as Lume 3 components, 
+loading additional CSS and JS on top of the framework only when they're 
+used. Alerts, Content Rating, and more coming like tabs, carousels and other
+things content-heavy sites frequently need.
 
 <h2 id="plugins">Includes A Ton Of Pre-Configured Plugins!</h2>
 
