--- a/src/docs/components.mdx
+++ b/src/docs/components.mdx
@@ -51,9 +51,9 @@ structure:
 ```
   _components/
       - siteComponent/
-          - comp.vto
-          - comp.css
-          - comp.js
+          - comp.vto    < The template code
+          - style.css   < Any classes written just for it
+          - script.js   < JS for events, whatever else it needs to work
 ```
 
 So, when you used `comp.siteComponent()`, it would automatically load what it
